--- a/KANDIGI/css/styleWelcome.css
+++ b/KANDIGI/css/styleWelcome.css
@@ -1,16 +1,20 @@
-*{
+* {
     margin: 0;
     padding: 0;
     font-family: 'Montserrat';
 }
 
-body{
-    background-image: url(/img/bg.png);
+html {
+    overflow: hidden;
+}
+
+body {
+    background-image: url(../img/bg.png);
     background-color: #1C8CFF !important;
     background-blend-mode: overlay;
 }
 
-.headingText > h1{
+.headingText>h1 {
     color: white;
     position: relative;
     top: 50px;
@@ -19,13 +23,13 @@ body{
     font-family: "Big Shoulders Text", serif;
 }
 
-.bgImage{
+.bgImage {
     z-index: -10;
     height: 700px;
     opacity: 50%;
 }
 
-.nextButton > button{
+.nextButton>button {
     color: black;
     position: relative;
     top: 80px;
@@ -34,15 +38,14 @@ body{
     border-radius: 40px;
 }
 
-.overlay{
-    position: relative;
-}
-
-.overlay > img{
+.overlay>img {
     position: absolute;
-    left: 966px;
-    bottom: -271px;
+    right: 0;
+    bottom: 0;
+    /* left: 966px; */
+    /* bottom: -271px; */
     width: 400px;
+    height: 400px;
 }
 
 /* .overlay > .lingkaran{
@@ -56,3 +59,23 @@ body{
     overflow: hidden;
 }
  */
+
+.eclipse1 {
+    position: absolute;
+    left: -75px;
+    bottom: -150px;
+    background-color: white;
+    border-radius: 100%;
+    height: 300px;
+    width: 300px;
+}
+
+.eclipse2 {
+    position: absolute;
+    right: -100px;
+    top: -150px;
+    background-color: white;
+    border-radius: 100%;
+    height: 300px;
+    width: 300px;
+}
